// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SeacrhScreen /> debe de mostrar a Batman y el input con el valor del query string 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-12 col-md-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn mt-2 w-100 btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-12 col-md-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="col"
      >
        <div
          className="card"
        >
          <img
            alt="Batman"
            className="card-img-top"
            src="/../assets/heroes/dc-batman.jpg"
          />
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              Batman
            </h5>
            <p
              className="card-text"
            >
              <strong>
                Alter Ego:
              </strong>
               
              Bruce Wayne
            </p>
            <p
              className="card-text"
            >
              <strong>
                Characters:
              </strong>
                
              Bruce Wayne
               
            </p>
            <a
              href="/HeroesApp/hero/dc-batman"
              onClick={[Function]}
            >
              Más..
            </a>
          </div>
          <div
            className="card-footer"
          >
            <small
              className="text-muted"
            >
              <strong>
                Firt Appearance:
              </strong>
               
              Detective Comics #27
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SeacrhScreen /> debe de mostrarse correctamente con valores por defecto 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-12 col-md-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn mt-2 w-100 btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-12 col-md-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Search a hero
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SeacrhScreen /> debe de un error si no se encuentra el hero 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-12 col-md-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman123"
        />
        <button
          className="btn mt-2 w-100 btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-12 col-md-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-danger"
      >
        There is no a hero with 
        batman123
      </div>
    </div>
  </div>
</div>
`;
